--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -2163,16 +2163,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=7958#p7958" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Open source 3D printing software via web interface!
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/printing/#octoprint" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Open source 3D printing software via web interface!</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>OctoPrint provides a web interface for controlling consumer 3D printers.</p>
 						</div>
@@ -2188,16 +2182,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=30#p221" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Recommended for advanced users only
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/advanced_networking/#haproxy" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Recommended for advanced users only</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>High performance TCP/HTTP load balancer</p>
 						</div>
@@ -2213,16 +2201,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=10#p58" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Free website URL address pointing to your device
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/advanced_networking/#no-ip" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Free website URL address pointing to your device</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Use your No-IP account and website URL address to always have it pointing to your DietPi System. Essential if your hosting a website.</p>
 						</div>
@@ -2238,16 +2220,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=10#p62" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Lightweight SSH server
-								</div>
-								<div>
-									<span>Cons:</span>Lacks full SCP/SFTP support
-								</div>
+								<div><a href="https://dietpi.com/docs/software/ssh/#dropbear" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Lightweight SSH server</div>
+								<div><span>Cons:</span>Lacks full SCP/SFTP support</div>
 							</div>
 							<p>Lightweight SSH server, installed by default on DietPi systems.</p>
 						</div>
@@ -2263,16 +2239,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=10#p63" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Feature rich SSH server with SCP/SFTP support
-								</div>
-								<div>
-									<span>Cons:</span>Somewhat bulkier than our default Dropbear SSH server
-								</div>
+								<div><a href="https://dietpi.com/docs/software/ssh/#openssh" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Feature rich SSH server with SCP/SFTP support</div>
+								<div><span>Cons:</span>Somewhat bulkier than our default Dropbear SSH server</div>
 							</div>
 							<p>Feature rich SSH server with SFTP/SCP support.</p>
 						</div>
@@ -2288,16 +2258,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=20#p68" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Minimal/fast logging without disk writes
-								</div>
-								<div>
-									<span>Cons:</span>Log file contents cleared every hour to reduce RAM usage
-								</div>
+								<div><a href="https://dietpi.com/docs/software/log_system/#dietpi-ramlog" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Minimal/fast logging without disk writes</div>
+								<div><span>Cons:</span>Log file contents cleared every hour to reduce RAM usage</div>
 							</div>
 							<p>Installed by default on DietPi. Ideal for users who do not require log files, and, to increase SD card lifespan and improve overall system performance.</p>
 						</div>
@@ -2313,16 +2277,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=20#p68" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Full Linux log system
-								</div>
-								<div>
-									<span>Cons:</span>Disables DietPi-RAMlog, increases disk writes
-								</div>
+								<div><a href="https://dietpi.com/docs/software/log_system/#full-logging" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Full Linux log system</div>
+								<div><span>Cons:</span>Disables DietPi-RAMlog, increases disk writes</div>
 							</div>
 							<p>Full Logging (Rsyslog & Logrotate): For users who require the maximum logging possible, with no interference from DietPi.</p>
 						</div>
@@ -2338,16 +2296,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=13160#p13160" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Install, configure additional community extensions
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/media/#roon-extension-manager" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Install, configure additional community extensions</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>At startup the Roon Extension Manager accesses a repository containing the community developed extensions. Via Settings->Extensions within Roon the repository can be viewed and an extension can be selected to perform a certain action.</p>
 						</div>
@@ -2363,16 +2315,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=12969#p12969" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>View, share and browse your book/comic collection on any device
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/media/#ubooquity" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>View, share and browse your book/comic collection on any device</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Ubooquity is a free home server for your comics and ebooks library, with remote web interface viewing.</p>
 						</div>
@@ -2388,16 +2334,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=130#p13580" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Slick web interface.
-								</div>
-								<div>
-									<span>Cons:</span>Currently in early Beta.
-								</div>
+								<div><a href="https://dietpi.com/docs/software/bittorrent/#lidarr" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Slick web interface</div>
+								<div><span>Cons:</span>Currently in early Beta</div>
 							</div>
 							<p>Automatically download your favorite music from various artists, as they become available. It can monitor multiple RSS feeds for new music of your favorite artists and will grab, sort and rename them.</p>
 						</div>
@@ -2413,16 +2353,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=130#p13704" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Do science stuff, automatically, without a degree and help the human race!
-								</div>
-								<div>
-									<span>Cons:</span>"Pot luck" if you receive a job that will use all available CPU cores
-								</div>
+								<div><a href="https://dietpi.com/docs/software/computational_science/#foldinghome" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Do science stuff, automatically, without a degree and help the human race!</div>
+								<div><span>Cons:</span>"Pot luck" if you receive a job that will use all available CPU cores</div>
 							</div>
 							<p>Folding@home is a project focused on disease research. The problems we’re solving require so many computer calculations. They need your help to find the cures!</p>
 						</div>
@@ -2438,16 +2372,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=13918#p13918" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Simple, slick web interface for RSS.
-								</div>
-								<div>
-									<span>Cons:</span>Web server required.
-								</div>
+								<div><a href="https://dietpi.com/docs/software/social/#freshrss" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Simple, slick web interface for RSS</div>
+								<div><span>Cons:</span>Web server required</div>
 							</div>
 							<p>A self-hosted RSS feed aggregator.</p>
 						</div>
@@ -2463,16 +2391,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=13978#p13978" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Lightweight web Interface audio player for MPD
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/media/#mympd" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Lightweight web Interface audio player for MPD</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>A lightweight, bare-bones, no frills HiFi music player with a web based interface. myMPD is a front end for MPD, and a recent fork of YMPD. myMPD provides a reworked UI based on Bootstrap 4, and, a modernized backend including many new features, whilst having the same small footprint as ympd.</p>
 						</div>
@@ -2488,16 +2410,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=15975#p15975" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Internet freedom and complete privacy VPN.
-								</div>
-								<div>
-									<span>Cons:</span>Requires a paid subscription
-								</div>
+								<div><a href="https://dietpi.com/docs/software/vpn/#dietpi-nordvpn" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Internet freedom and complete privacy VPN</div>
+								<div><span>Cons:</span>Requires a paid subscription</div>
 							</div>
 							<p>DietPi-NordVPN is a combination of OpenVPN installation and DietPi front end GUI. Allowing all NordVPN users to quickly and easily connect to any NordVPN server in TCP or UDP, using only open source software. Highly recommended for BitTorrent/NZB use.</p>
 						</div>
