--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -1878,7 +1878,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=10#p52" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/webserver_stack/#apache2" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -1904,7 +1904,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=10#p53" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/webserver_stack/#nginx" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -1930,7 +1930,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?p=1335#p1335" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/webserver_stack/#lighttpd" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -1956,14 +1956,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=10#p54" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>TBA
-								</div>
-								<div>
-									<span>Cons:</span>TBA
+									<a href="https://dietpi.com/docs/software/webserver_stack/#phpmyadmin" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 							</div>
 							<p>Web interface SQL admin tool for web server installations. </p>
@@ -1981,7 +1974,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?p=1062#p1062" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
+									<a href="https://dietpi.com/docs/software/system_security/#lets-encrypt" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 								<div>
 									<br>
@@ -2006,14 +1999,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							</div>
 							<div class="project-info">
 								<div>
-									<a href="phpbb/viewtopic.php?p=4316#p4316" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>TBA
-								</div>
-								<div>
-									<span>Cons:</span>TBA
+									<a href="https://dietpi.com/docs/software/webserver_stack/#tomcat" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
 								</div>
 							</div>
 							<p>Tomcat is a Servlet and JSP Server serving Java technologies. In your Java project you can build your WAR (short for <code>Web ARchive</code>) file, and simply drop it in the deploy directory in Tomcat. </p>
