--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none"><polygon points="0,0 100,0 50,100"/></svg>
 				<!-- Start slide -->
 				<div class="da-slide da-slide-current">
+					<h2>DietPi | December 2020 Release</h2>
+					<h4>New software titles & more enhancements</h4>
+					<p>Enjoy the next generation of Minecraft server, the best Docker UI management tool and more software security titles. Raspberry Pi 400 is now supported. Plus documentation of the DietPi Optimised software.</p>
+					<a href="https://dietpi.com/docs/release-notes/#december-2020-version-634" class="da-link" target="_blank" rel="noopener">Read more</a>
+					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" width="300" alt="DietPi logo" loading="lazy"></div>
+				</div>
+				<!-- End slide -->
+				<!-- Start slide -->
+				<div class="da-slide">
 					<h2>DietPi</h2>
 					<h4>Lightweight justice for your single-board computer!</h4>
 					<p>Optimised | Simplified | For everyone</p>
