Change "Single File PHP Gallery" tile name as well

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -3052,7 +3052,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/imageallery_0.jpg" alt="project 64" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv64"><i class="fa fa-plus"></i></a>
-							<h3>Image Gallery</h3>
+							<h3>Single File PHP Gallery</h3>
 							<p>Host/browse images via web interface</p>
 							<div class="mask"></div>
 						</div>
