Change package name to "Single File PHP Gallery" (#24)

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -1352,11 +1352,11 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 				</div>
 				<!-- Start details for portfolio project 64 -->
 				<div id="slidingdiv64" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/imageallery_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/imageallery_1.jpg" alt="Image Gallery" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/imageallery_1.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/imageallery_1.jpg" alt="Single File PHP Gallery" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Image Gallery</h3>
+								<h3>Single File PHP Gallery</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
@@ -3052,7 +3052,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/imageallery_0.jpg" alt="project 64" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv64"><i class="fa fa-plus"></i></a>
-							<h3>Image Gallery</h3>
+							<h3>Single File PHP Gallery</h3>
 							<p>Host/browse images via web interface</p>
 							<div class="mask"></div>
 						</div>
