Renamed "Minio" => "MinIO": https://min.io/

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -1295,11 +1295,11 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 				</div>
 				<!-- Start details for portfolio project 61 -->
 				<div id="slidingdiv61" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/minio_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/minio_0.jpg" alt="Minio" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/minio_0.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/minio_0.jpg" alt="MinIO" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>Minio</h3>
+								<h3>MinIO</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
@@ -3016,7 +3016,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/minio_0.jpg" alt="project 61" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv61"><i class="fa fa-plus"></i></a>
-							<h3>Minio</h3>
+							<h3>MinIO</h3>
 							<p>S3 compatible distributed object server</p>
 							<div class="mask"></div>
 						</div>
