--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Raspberry Pi</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -269,7 +269,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Odroid C1</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -298,7 +298,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Odroid C2</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -323,7 +323,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Odroid XU3/XU4/MC1/HC1/HC2</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -348,7 +348,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>PINE A64</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -375,7 +375,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi NEO</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -402,7 +402,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi NEO Air</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -430,7 +430,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi M1/T1</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -457,7 +457,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi M2/T2</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -484,7 +484,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi M3/T3</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -511,7 +511,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Odroid N1</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -538,7 +538,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Pinebook</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -566,7 +566,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Hyper-V (Community image by @yumiris)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -591,7 +591,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Odroid N2</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -618,7 +618,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>VMware</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -643,7 +643,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>VirtualBox</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -668,7 +668,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>ROCK Pi 4</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -695,7 +695,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>ZeroPi</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -721,7 +721,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Sparky SBC (Allo)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -753,7 +753,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>ASUS Tinker Board</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -780,7 +780,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi Fire3</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -807,7 +807,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi M1 Plus</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -835,7 +835,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi NEO2</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -862,7 +862,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi K1 Plus</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -889,7 +889,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Firefly RK3399 (beta)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -915,7 +915,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi NEO2 Black (beta)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -943,7 +943,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi M4V2</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -970,7 +970,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>PINE H64 (beta)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -998,7 +998,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>ROCKPro64</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1025,7 +1025,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Native PC for BIOS/CSM</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1057,7 +1057,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>ROCK64</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1086,7 +1086,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Native PC for UEFI</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1114,7 +1114,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Other device (beta)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1139,7 +1139,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPC T4</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1166,7 +1166,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>ROCK Pi S (beta)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1193,7 +1193,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi NEO Plus2</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1219,7 +1219,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPC M4</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1246,7 +1246,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi NEO4</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1273,7 +1273,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi NEO3 (beta)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1300,7 +1300,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi R2S (beta)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1327,7 +1327,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>NanoPi K2 (beta)</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
@@ -1354,7 +1354,7 @@
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
 							<h3>Odroid C4/HC4</h3>
-							<span class="show_hide close"><i class="fa fa-times"></i></span>
+							<span class="show_hide close fa fa-times"></span>
 						</div>
 					</div>
 					<div class="row">
