Align 404 page background with main page

--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 		<style>
 			body {
 				color: #ffffff;
-				background-color: #000000;
+				background-color: #181a1c;
 				font-family: Verdana, Arial, Helvetica, sans-serif;
 				text-align: center;
 			}
