renamed contribute file

--- a/contribute.html
+++ b/contribute.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="home" href="https://dietpi.com/">
-		<link rel="canonical" href="https://dietpi.com/dietpi-contribute.html">
+		<link rel="canonical" href="https://dietpi.com/contribute.html">
 		<title>DietPi-Software - Lightweight justice for your SBC!</title>
 		<meta name="description" content="Optimised | Simplified | For everyone - Easy to install and run optimised software for your SBC - Raspberry Pi, Odroid, PINE64 etc.!">
 		<!-- Twitter meta tags: https://developer.twitter.com/docs/twitter-for-websites/cards -->
@@ -18,7 +18,7 @@
 		<meta property="og:locale" content="en_GB">
 		<meta property="og:site_name" content="DietPi-Software">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://dietpi.com/dietpi-contribute.html">
+		<meta property="og:url" content="https://dietpi.com/contribute.html">
 		<meta property="og:title" content="Lightweight justice for your SBC!">
 		<meta property="og:description" content="Optimised | Simplified | For everyone - Backed by community, DietPi is a minimal OS image for SBCs - Raspberry Pi, Odroid, PINE64 etc. Install software optimised for you!">
 		<meta property="og:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
@@ -54,7 +54,7 @@
 					<a class="nav-link" href="/#features">Features</a>
 					<a class="nav-link" href="/#download">Download</a>
 					<a class="nav-link" href="/#gettingstarted">Getting Started</a>
-					<a class="nav-link" href="/dietpi-contribute.html">Contribute</a>
+					<a class="nav-link" href="/contribute.html">Contribute</a>
 					<a class="nav-link" href="/#testimonials">Testimonials</a>
 				</div>
 				<!-- End main navigation -->
