--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<a class="nav-link" href="#features">Features</a>
 					<a class="nav-link" href="#download">Download</a>
 					<a class="nav-link" href="#gettingstarted">Getting Started</a>
-					<a class="nav-link" href="/dietpi-contribute.html">Contribute</a>
+					<a class="nav-link" href="/contribute.html">Contribute</a>
 					<a class="nav-link" href="#testimonials">Testimonials</a>
 				</div>
 				<!-- End main navigation -->
