--- a/contribute.html
+++ b/contribute.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="home" href="https://dietpi.com/">
-		<link rel="canonical" href="https://dietpi.com/dietpi-software.html">
+		<link rel="canonical" href="https://dietpi.com/contribute.html">
 		<title>DietPi-Software - Lightweight justice for your SBC!</title>
 		<meta name="description" content="Optimised | Simplified | For everyone - Easy to install and run optimised software for your SBC - Raspberry Pi, Odroid, PINE64 etc.!">
 		<!-- Twitter meta tags: https://developer.twitter.com/docs/twitter-for-websites/cards -->
@@ -18,7 +18,7 @@
 		<meta property="og:locale" content="en_GB">
 		<meta property="og:site_name" content="DietPi-Software">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://dietpi.com/dietpi-software.html">
+		<meta property="og:url" content="https://dietpi.com/contribute.html">
 		<meta property="og:title" content="Lightweight justice for your SBC!">
 		<meta property="og:description" content="Optimised | Simplified | For everyone - Backed by community, DietPi is a minimal OS image for SBCs - Raspberry Pi, Odroid, PINE64 etc. Install software optimised for you!">
 		<meta property="og:image" content="https://dietpi.com/images/dietpi-logo_720x720.png">
@@ -64,10 +64,21 @@
 		<div class="section secondary-section" id="download">
 			<div class="container-xl software">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none"><polygon points="0,0 100,0 50,100"/></svg>
-				<div class="title">
-					<h1>DietPi-Software</h1>
-					<p>Easily install optional "ready to run" and optimized software for your device. As well as automating the Linux installation and configuration process for you, DietPi-Software also applies specific optimizations unique to your hardware model, ensuring you get the maximum performance from your device.</p>
-					<p><i>NB: Available software is dependent on the device and CPU architecture, some software titles may be unavailable. You can run the following command to list disabled items:</i> <i style="color:orange">dietpi-software list | grep disabled</i></p>
+				<div id="title-1" class="title">
+					<h1>Contribute to DietPi</h1>
+					<p>Contributions are always welcome, no matter how small or large. 
+						<br/>You can do this in many ways: you can contribute code, make improvements to the DietPi documentation, participate in the discussion on our forum, report an issue or investigate existent ones on GitHub. This page provides everything you need to get started !</p>
+				</div>
+				<div id="title-2" class="title">
+					<h1>Grow in 2021</h1>
+					<p style="font-weight: bold">This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the hardware and infrastructure costs. 
+						<br/><br/>
+						In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimizations. Enable us to grow more in 2021 !
+					</p>
+					<p>
+						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DVBECXRW3TAA" class="button" target="_blank" rel="noopener">Donate via PayPal</a>
+						<a href="https://www.patreon.com/bePatron?u=12464530" class="button" target="_blank" rel="noopener">Become a Patron</a>
+					</p>
 				</div>
 				<nav class="nav nav-pills" id="downloadinfo" style="display:none">
 					<button class="nav-link filter" data-filter="all">[All]</button>
