--- a/contribute.html
+++ b/contribute.html
@@ -69,13 +69,13 @@
 					<p>Contributions are always welcome, no matter how small or large. 
 						<br/>You can do this in many ways: you can contribute code, make improvements to the DietPi documentation, participate in the discussion on our forum, report an issue or investigate existent ones on GitHub. This page provides everything you need to get started !</p>
 				</div>
-				<div id="title-2" class="title">
+				<div id="title-2" class="container-xl centered">
 					<h1>Grow in 2021</h1>
-					<p style="font-weight: bold">This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the hardware and infrastructure costs. 
+					<p>This month we are asking you to help DietPi project. DietPi is an open source product and it is free to use. We are sustained by donations and <b>even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the hardware and infrastructure costs. 
 						<br/><br/>
 						In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimizations. Enable us to grow more in 2021 !
 					</p>
-					<p>
+					<p class="large-text">
 						<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DVBECXRW3TAA" class="button" target="_blank" rel="noopener">Donate via PayPal</a>
 						<a href="https://www.patreon.com/bePatron?u=12464530" class="button" target="_blank" rel="noopener">Become a Patron</a>
 					</p>
